--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
               <h1>Calculadora de médias</h1>
         </header>
         <form id="form-atividade">
-          <input type="text" id="nome-atividade"  required="true" placeholder="Matéria" />
-          <input type="number" id="nota-atividade" required="true" placeholder="Nota">
+          <input type="text" id="nome-atividade"required="true" placeholder="Matéria" />
+          <input type="number" id="nota-atividade" max="10" required="true" placeholder="Nota">
           <button id="btn-add">Adicionar</button>
         </form>
     
